# ChangeLog for www-client/surfraw
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/surfraw/ChangeLog,v 1.52 2010/01/12 04:04:30 jer Exp $

  12 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  -files/surfraw-2.1.5-gentoo_pkg_tools.patch, -surfraw-2.2.5.ebuild:
  Remove old.

  10 Jan 2010; Markus Meier <maekke@gentoo.org> surfraw-2.2.6.ebuild:
  x86 stable, bug #298240

  28 Dec 2009; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.6.ebuild:
  Stable for HPPA (bug #298240).

  28 Dec 2009; Tiago Cunha <tcunha@gentoo.org> surfraw-2.2.6.ebuild:
  stable sparc, bug 298240

  28 Dec 2009; nixnut <nixnut@gentoo.org> surfraw-2.2.6.ebuild:
  ppc stable #298240

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org> surfraw-2.2.6.ebuild:
  amd64 stable, bug 298240

*surfraw-2.2.6 (20 Nov 2009)

  20 Nov 2009; Jeroen Roovers <jer@gentoo.org> +surfraw-2.2.6.ebuild,
  +files/surfraw-2.2.6-gentoo_pkg_tools.patch:
  Version bump thanks to James Rowe (bug #293836).

  12 Aug 2009; Jeroen Roovers <jer@gentoo.org> -surfraw-2.2.4.ebuild:
  Remove old.

  25 Jul 2009; Jeroen Roovers <jer@gentoo.org>
  files/surfraw-2.1.5-gentoo_pkg_tools.patch:
  Fixed completion script
  to work without app-shells/bash-completion installed, many thanks to
  urcindalo in Bug #277891.

  19 Jul 2009; nixnut <nixnut@gentoo.org> surfraw-2.2.5.ebuild:
  ppc stable #274439

  30 Jun 2009; Raúl Porcel <armin76@gentoo.org> surfraw-2.2.5.ebuild:
  sparc stable wrt #274439

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org> surfraw-2.2.5.ebuild:
  stable x86, bug 274439

  17 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  surfraw-2.2.5.ebuild:
  stable amd64, bug 274439

  17 Jun 2009; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Make e-mail address match the one in bugzilla.

  17 Jun 2009; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.5.ebuild:
  Stable for HPPA (bug #274439).

*surfraw-2.2.5 (13 May 2009)
