@@ -1,6 +1,8 @@
 AUX surfraw-2.1.5-gentoo_pkg_tools.patch 1455 RMD160 a477cd3c4427fc3cc152a44d8a9885691aed2141 SHA1 01ae1c400de2737f6b5a40d785288bfafc48b0b1 SHA256 1a1f1cd6e5d0b75e5987059bd57fe9905ed5ee668e636a931b09428eafc2e11d
 AUX surfraw-2.2.6-gentoo_pkg_tools.patch 1254 RMD160 a4be36b8b8cbee8213d9508e5918fa213eb0e8ca SHA1 ebd44cc7886228f98216b748a083cc0574ac64db SHA256 85ef8e10b319ab7f19333a226fbb1edf3604d48de74a77a12ffab430c1f22079
 DIST surfraw-2.2.6.tar.gz 165105 RMD160 fa046e26057fdacbac7d1f1502bef9cafed030c4 SHA1 d6326e3092bc11506987ae29db344fbd27502b84 SHA256 950b6bde88ed770eb9914cdd6b8197d106dc6feffc851c55df7d4d7cb3a25050
+DIST surfraw-2.2.7.tar.gz 169771 RMD160 aaab07dd942ad7fa0885d362132bc7db6d87b59c SHA1 18f7db3b85f6c8af784338b9af66bf84d9d33443 SHA256 1f23e08210ba04d874e825e6bbbdb23e669cf9c0804388ba0fdd0fd535995fcb
 EBUILD surfraw-2.2.6.ebuild 2794 RMD160 3dd0ce20be036f321489321a479af2b60d7cba16 SHA1 88875236b48dba39423e1b9d074a158acd57d6e3 SHA256 6cbdbeb81a267bdc21c54576e10931e4f1551a37963a17ea8be8b42d1e63e575
-MISC ChangeLog 7119 RMD160 55cf3f91fcaefd074ca1f0b70b8e1676b70f4dce SHA1 a4607245f8cc6e6bb50a71d9ac99a5679b8ede90 SHA256 042c5a7f1839c6b7f84e9d88f63365178ff76f6687a04c514d7aa9e22d7befd3
+EBUILD surfraw-2.2.7.ebuild 2758 RMD160 749dc27f0c509fb9f49a97e955907bea17b56f0b SHA1 73979793b9e51c85763f0a64ab9d3eb0b84aec76 SHA256 767d63c1b0af7470d314ecfe8522d5a3531daaaecb8262f1d51938bc6dcc17a5
+MISC ChangeLog 7271 RMD160 0f47e4f82435cad29e99514e61436cd1b5912249 SHA1 fff7d7af05d57a795711c8c460647ce4aa8c951e SHA256 700a83d5c8f4dca825ecff0623cc1c79e0d4b3ddf2e6dc13ec22d0814bd07d8d
 MISC metadata.xml 1316 RMD160 f70a1705c3cc6a47d59b897962af89a4e33deaa2 SHA1 3e080a500f355319d9ec624c9b7c446dfa71fff3 SHA256 91f4b6e59cf528ffec4b55dea2ba072278274f207b92f9ce6b45c5104da8bf8e
